sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:19: error: value +- is not a member of Int
    n+-=1;
     ^